--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "warrior-rescue-princess",
   "version": "1.0.0",
-  "description": "勇士救公主 - uni-app横版闯关游戏",
+  "description": "钱程似金 - uni-app横版闯关游戏",
   "main": "main.js",
   "scripts": {
     "dev:h5": "uni -p h5",
