--- a/manifest.json
+++ b/manifest.json
@@ -1,45 +1,45 @@
 {
-    "name" : "钱程似金",
-    "appid" : "__UNI__7EB1013",
-    "description" : "一个基于uni-app的横版闯关游戏",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
-    "transformPx" : false,
-    "h5" : {
-        "devServer" : {
-            "port" : 8080,
-            "https" : false
-        },
-        "router" : {
-            "mode" : "hash"
-        },
-        "optimization" : {
-            "treeShaking" : {
-                "enable" : true
-            }
-        },
-        "title" : "钱程似金",
-        "sdkConfigs" : {
-            "maps" : {}
-        }
+  "name": "钱程似金-拯救公主",
+  "appid": "__UNI__7EB1013",
+  "description": "钱程似金-拯救公主，2D横版闯关游戏",
+  "versionName": "1.0.0",
+  "versionCode": "100",
+  "transformPx": false,
+  "h5": {
+    "devServer": {
+      "port": 8080,
+      "https": false
     },
-    "mp-weixin" : {
-        "appid" : "",
-        "setting" : {
-            "urlCheck" : false
-        },
-        "usingComponents" : true
+    "router": {
+      "mode": "hash"
     },
-    "mp-alipay" : {
-        "usingComponents" : true
+    "optimization": {
+      "treeShaking": {
+        "enable": true
+      }
     },
-    "mp-baidu" : {
-        "usingComponents" : true
-    },
-    "mp-toutiao" : {
-        "usingComponents" : true
-    },
-    "uniStatistics" : {
-        "enable" : false
+    "title": "钱程似金-拯救公主",
+    "sdkConfigs": {
+      "maps": {}
     }
+  },
+  "mp-weixin": {
+    "appid": "wxbb62b5252415fa8a",
+    "setting": {
+      "urlCheck": false
+    },
+    "usingComponents": true
+  },
+  "mp-alipay": {
+    "usingComponents": true
+  },
+  "mp-baidu": {
+    "usingComponents": true
+  },
+  "mp-toutiao": {
+    "usingComponents": true
+  },
+  "uniStatistics": {
+    "enable": false
+  }
 }
