chore: update .gitignore to include WeChat credentials and private configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,7 @@ Thumbs.db
 .env
 .env.*
 
-wx_upload_secretkey
+# WeChat credentials & private configs
+wx_upload_secretkey/
+project.private.config.json
+minigame/project.private.config.json
